polish: The Dig Site (#2597)
* test: some Conditions tests

* test: allow QuestSyncStep to bypass sidebar step

These should only be there in rare cases

* test: opt into sidebar test

* refactor: modernize

* nit: use a QuestSyncStep for the sync step

* fix: add missing sidebar step

* fix: quest start dialog highlight

* fix: improve quest sync student steps

* fix: improve quest sync steps for exam 3

Fixes #2580

* nit: specify ground charcoal

* fix: two second of being on the wrong step after ignting the bricks

* chore: add myself to license blurb